refactor the way scopes are handled